fixed ugly wrapping issue on the Game Theory link

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ header {
     height: 5rem;
     text-decoration: none;
     color: black;
+    white-space: nowrap; /* solves ugly wrapping issue */
 
 }
 
